[package]
name = "rust-ip-detection"
version = "0.0.4"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.43", default-features = false, features = ["rt-multi-thread", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
actix-files = "0.6"
actix-multipart = "0.7"
actix-web = "4"
actix-web-grants = "4"
actix-web-httpauth = "0.8"
actix-web-lab = "0.24"
actix-web-static-files = "4.0"
x25519-dalek = "3.0.0-pre.0"
rand_core = "0.9.3"
base64 = "0.22"

[[bin]]
name = "rust-ip-detection"
path = "src/cli.rs"

[lib]
name = "ld_"
path = "src/lib.rs"

[profile.release]
lto = false
strip = true
panic = 'abort'
opt-level = 3
codegen-units = 1